--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
 Flask==2.1.0
 gunicorn==20.1.0
-oauth2client==4.1.3
-oauthlib==3.2.2
-gcloud==0.18.3
 torch
 torchvision
 pillow
 tqdm
 argparse
-transformers
 pathlib
+onnx==1.14.0
+onnxruntime==1.15.1
